--- a/app.ui
+++ b/app.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>661</width>
-    <height>533</height>
+    <height>521</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -33,76 +33,6 @@
    <string notr="true">QMainWindow{background-color:#EF233C;}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="search">
-    <property name="geometry">
-     <rect>
-      <x>580</x>
-      <y>120</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
-QPushButton{
-	background-color:#8D99AE;
-	border-radius:20px;
-	color:#FCA311;
-	transition: all  500ms;
-}
-QPushButton::hover{
-	background-color:#FFA62B;
-	border-radius:20px;
-	color:#14213d;
-	transition: all 100ms;
-}
-QPushButton:pressed{
-	background-color:#2B2D42;
-	border-radius:20px;
-	color:#fffff;
-	transition: all 100ms;
-}
-  </string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>searchengin-brands.svg</normaloff>searchengin-brands.svg</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>32</width>
-      <height>32</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="sinput">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>120</y>
-      <width>541</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLineEdit{
-	border-radius:20px;
-	background-color:#EDF2F4;
-	
-}</string>
-    </property>
-    <property name="placeholderText">
-     <string>Aranan şarkının ismi veya URL si</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
@@ -128,31 +58,6 @@ QPushButton:pressed{
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>90</y>
-      <width>621</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Poetsen One</family>
-      <pointsize>11</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string>Aranan şarkının ismi veya URL si</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
@@ -172,124 +77,164 @@ QPushButton:pressed{
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QListWidget" name="songlist">
+   <widget class="QFrame" name="searcharea">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>200</y>
-      <width>541</width>
-      <height>311</height>
+      <x>10</x>
+      <y>70</y>
+      <width>641</width>
+      <height>441</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">QListWidget{
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>621</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Poetsen One</family>
+       <pointsize>11</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Aranan şarkının ismi veya URL si</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="search">
+     <property name="geometry">
+      <rect>
+       <x>570</x>
+       <y>40</y>
+       <width>61</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">
+QPushButton{
+	background-color:#8D99AE;
+	border-radius:20px;
+	color:#FCA311;
+	transition: all  500ms;
+}
+QPushButton::hover{
+	background-color:#FFA62B;
+	border-radius:20px;
+	color:#14213d;
+	transition: all 100ms;
+}
+QPushButton:pressed{
+	background-color:#2B2D42;
+	border-radius:20px;
+	color:#fffff;
+	transition: all 100ms;
+}
+  </string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>searchengin-brands.svg</normaloff>searchengin-brands.svg</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="download">
+     <property name="geometry">
+      <rect>
+       <x>570</x>
+       <y>140</y>
+       <width>61</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">
+QPushButton{
+	background-color:#8D99AE;
+	border-radius:20px;
+	color:#FCA311;
+	transition: all  500ms;
+}
+QPushButton::hover{
+	background-color:#FFA62B;
+	border-radius:20px;
+	color:#14213d;
+	transition: all 100ms;
+}
+QPushButton:pressed{
+	background-color:#2B2D42;
+	border-radius:20px;
+	color:#fffff;
+	transition: all 100ms;
+}
+  </string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>download-solid.svg</normaloff>download-solid.svg</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QListWidget" name="songlist">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>120</y>
+       <width>541</width>
+       <height>311</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QListWidget{
 	border-radius:20px;
 	background-color:#EDF2F4;
 
 }</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="download">
-    <property name="geometry">
-     <rect>
-      <x>580</x>
-      <y>220</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
-QPushButton{
-	background-color:#8D99AE;
-	border-radius:20px;
-	color:#FCA311;
-	transition: all  500ms;
-}
-QPushButton::hover{
-	background-color:#FFA62B;
-	border-radius:20px;
-	color:#14213d;
-	transition: all 100ms;
-}
-QPushButton:pressed{
-	background-color:#2B2D42;
-	border-radius:20px;
-	color:#fffff;
-	transition: all 100ms;
-}
-  </string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>download-solid.svg</normaloff>download-solid.svg</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>32</width>
-      <height>32</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="youtube">
-    <property name="geometry">
-     <rect>
-      <x>580</x>
-      <y>320</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
-QPushButton{
-	background-color:#8D99AE;
-	border-radius:20px;
-	color:#FCA311;
-	transition: all  500ms;
-}
-QPushButton::hover{
-	background-color:#FFA62B;
-	border-radius:20px;
-	color:#14213d;
-	transition: all 100ms;
-}
-QPushButton:pressed{
-	background-color:#2B2D42;
-	border-radius:20px;
-	color:#fffff;
-	transition: all 100ms;
-}
-  </string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>youtube-brands.svg</normaloff>youtube-brands.svg</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>32</width>
-      <height>32</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="me">
-    <property name="geometry">
-     <rect>
-      <x>580</x>
-      <y>420</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
+     </property>
+    </widget>
+    <widget class="QPushButton" name="me">
+     <property name="geometry">
+      <rect>
+       <x>570</x>
+       <y>340</y>
+       <width>61</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">
 QPushButton{
 	background-color:#8D99AE;
 	border-radius:20px;
@@ -309,20 +254,91 @@ QPushButton:pressed{
 	transition: all 100ms;
 }
   </string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>86445789.png</normaloff>86445789.png</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>64</width>
-      <height>64</height>
-     </size>
-    </property>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>86445789.png</normaloff>86445789.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>64</width>
+       <height>64</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="sinput">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>541</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit{
+	border-radius:20px;
+	background-color:#EDF2F4;
+	
+}</string>
+     </property>
+     <property name="placeholderText">
+      <string>Aranan şarkının ismi veya URL si</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="youtube">
+     <property name="geometry">
+      <rect>
+       <x>570</x>
+       <y>240</y>
+       <width>61</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">
+QPushButton{
+	background-color:#8D99AE;
+	border-radius:20px;
+	color:#FCA311;
+	transition: all  500ms;
+}
+QPushButton::hover{
+	background-color:#FFA62B;
+	border-radius:20px;
+	color:#14213d;
+	transition: all 100ms;
+}
+QPushButton:pressed{
+	background-color:#2B2D42;
+	border-radius:20px;
+	color:#fffff;
+	transition: all 100ms;
+}
+  </string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>youtube-brands.svg</normaloff>youtube-brands.svg</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
